SimpleComplex/Validate 1.x, 2017-08-06
--------------------------------------
- Renamed class ValidateAgainstRuleSet; from ValidateByRules.

SimpleComplex/Validate 1.x, 2017-08-06
--------------------------------------
- Non-provider rule listItems replaces listItemPrototype.
- Fixed that optional is to be ignored for root ruleSet; not the opposite.
- Fixed that recording validation must record missing non-optional bucket.
- Fixed that listItems subsidary rules minOccur/maxOccur shan't stop
  validation on failure when recording failures.
- Abandoned attempts to make listItems support un-nested singleton item;
  that awful XML pattern. Users must instead use two (similar) rule sets.
- Implemented tableElements subsidary rules exclusive, whitelist, blacklist.

SimpleComplex/Validate 1.x, 2017-08-05
--------------------------------------
- Validation rule set class.
- All type et al checks moved from internal challenge method
  to ValidationRuleSet (constructor).
- ValidateByRules::challenge() now converts non-ValidationRuleSet
  arg ruleSet to ValidationRuleSet.

SimpleComplex/Validate 1.x, 2017-07-12
--------------------------------------
- Release 0.9.

SimpleComplex/Validate 1.x, 2017-06-27
--------------------------------------
- Validate no longer uses a logger, and option errUnconditionally removed.
  Use a good error handler instead.

SimpleComplex/Validate 1.x, 2017-06-20
--------------------------------------
- Rule method empty() missed support for ArrayAccess class.
- Type alias of a non-ArrayAccess Traversable is 'traversable'; not 'iterable'.
- keyedIterable() must return 'traversable' on non-ArrayAccess Traversable;
  not false.
- Pseudo-rule 'tableElements' replaces '_elements_'.
- New pseudo-rule 'listItemPrototype' for validating repeated similar
  items of a list.

SimpleComplex/Validate 1.x, 2017-06-19
--------------------------------------
- Accept iterable rules, not just array.

SimpleComplex/Validate 1.x, 2017-06-18